// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line Chart Component renders Line Chart have data unchanged 1`] = `
<div>
  <div
    class="ViewStyled-sc-rqe5sa-0 ViewStyled__BoxShadowStyled-sc-rqe5sa-2 hcqEVE dPpNOf"
    display="flex"
    width="100%"
  >
    <h1
      class="TextStyled-sc-9xia41-0 TitleStyled-sc-t58pjn-0 eJbYjT ivXuze"
      color="#000"
      font-size="18"
    >
      Score Projection
    </h1>
    <div
      class="ViewStyled-sc-rqe5sa-0 ksGJjB"
      height="250"
      width="100%"
    />
  </div>
  <div
    class="ViewStyled-sc-rqe5sa-0 eWEXdJ"
    display="flex"
  >
    <a
      class="LinkStyled__ButtonLinkStyled-sc-626068-1 cYfvgi"
      color="#919099"
      data-testid="link"
      font-size="13"
      href="/privacy-policy"
      letter-spacing="0.9"
    >
      Privacy Policy
    </a>
    <span
      class="TextStyled-sc-9xia41-0 hrVQLR"
      color="#919099"
    >
       - 
    </span>
    <a
      class="LinkStyled__ButtonLinkStyled-sc-626068-1 cYfvgi"
      color="#919099"
      data-testid="link"
      font-size="13"
      href="/terms-of-use"
      letter-spacing="0.9"
    >
      Terms of Use
    </a>
  </div>
</div>
`;

exports[`Line Chart Component renders Line Chart is locked unchanged 1`] = `
<div>
  <div
    class="ViewStyled-sc-rqe5sa-0 ViewStyled__BoxShadowStyled-sc-rqe5sa-2 hcqEVE dPpNOf"
    display="flex"
    width="100%"
  >
    <h1
      class="TextStyled-sc-9xia41-0 TitleStyled-sc-t58pjn-0 eJbYjT ivXuze"
      color="#000"
      font-size="18"
    >
      Score Projection
    </h1>
    <div
      class="ViewStyled-sc-rqe5sa-0 ksGJjB"
      height="250"
      width="100%"
    />
  </div>
  <div
    class="ViewStyled-sc-rqe5sa-0 eWEXdJ"
    display="flex"
  >
    <a
      class="LinkStyled__ButtonLinkStyled-sc-626068-1 cYfvgi"
      color="#919099"
      data-testid="link"
      font-size="13"
      href="/privacy-policy"
      letter-spacing="0.9"
    >
      Privacy Policy
    </a>
    <span
      class="TextStyled-sc-9xia41-0 hrVQLR"
      color="#919099"
    >
       - 
    </span>
    <a
      class="LinkStyled__ButtonLinkStyled-sc-626068-1 cYfvgi"
      color="#919099"
      data-testid="link"
      font-size="13"
      href="/terms-of-use"
      letter-spacing="0.9"
    >
      Terms of Use
    </a>
  </div>
</div>
`;

exports[`Line Chart Component renders Line Chart unlock and no data unchanged 1`] = `
<div>
  <div
    class="ViewStyled-sc-rqe5sa-0 ViewStyled__BoxShadowStyled-sc-rqe5sa-2 hcqEVE dPpNOf"
    display="flex"
    width="100%"
  >
    <h1
      class="TextStyled-sc-9xia41-0 TitleStyled-sc-t58pjn-0 eJbYjT ivXuze"
      color="#000"
      font-size="18"
    >
      Score Projection
    </h1>
    <div
      class="ViewStyled-sc-rqe5sa-0 ksGJjB"
      height="250"
      width="100%"
    >
      <div
        class="ViewStyled-sc-rqe5sa-0 jRwnka"
        width="120"
      >
        <span
          class="TextStyled-sc-9xia41-0 iWmMQb"
          color="#000"
          font-size="13"
          letter-spacing="0.68"
        >
          Add Bills To Project Your Future Score
        </span>
      </div>
    </div>
  </div>
  <div
    class="ViewStyled-sc-rqe5sa-0 eWEXdJ"
    display="flex"
  >
    <a
      class="LinkStyled__ButtonLinkStyled-sc-626068-1 cYfvgi"
      color="#919099"
      data-testid="link"
      font-size="13"
      href="/privacy-policy"
      letter-spacing="0.9"
    >
      Privacy Policy
    </a>
    <span
      class="TextStyled-sc-9xia41-0 hrVQLR"
      color="#919099"
    >
       - 
    </span>
    <a
      class="LinkStyled__ButtonLinkStyled-sc-626068-1 cYfvgi"
      color="#919099"
      data-testid="link"
      font-size="13"
      href="/terms-of-use"
      letter-spacing="0.9"
    >
      Terms of Use
    </a>
  </div>
</div>
`;
